name:                constellation
version:             0.3.0
synopsis:            Constellation
description:         Constellation
homepage:            https://github.com/jpmorganchase/constellation
license:             Apache-2.0
license-file:        LICENSE
author:              Patrick Nielsen
maintainer:
copyright:
category:            Network
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      .
  exposed-modules:     Constellation.Configure.Main
                       Constellation.Enclave
                       Constellation.Enclave.Key
                       Constellation.Enclave.Keygen.Main
                       Constellation.Enclave.Main
                       Constellation.Enclave.Payload
                       Constellation.Enclave.Types
                       Constellation.Node
                       Constellation.Node.Api
                       Constellation.Node.Config
                       Constellation.Node.Main
                       Constellation.Node.Storage.BerkeleyDb
                       Constellation.Node.Storage.Directory
                       Constellation.Node.Storage.LevelDb
                       Constellation.Node.Storage.Memory
                       Constellation.Node.Storage.Sqlite
                       Constellation.Node.Trust
                       Constellation.Node.Types
                       Constellation.Util.AtExit
                       Constellation.Util.ByteString
                       Constellation.Util.Either
                       Constellation.Util.Exception
                       Constellation.Util.File
                       Constellation.Util.Http
                       Constellation.Util.Json
                       Constellation.Util.Lockable
                       Constellation.Util.Logging
                       Constellation.Util.Network
                       Constellation.Util.String
                       Constellation.Util.Text
                       Constellation.Util.Tls
                       Constellation.Util.Tls.Vincent
                       Constellation.Util.Wai
  ghc-options:         -Wall
  build-depends:       base >= 4.9
                     , aeson >= 0.11
                     , aeson-pretty >= 0.8.5
                     , asn1-encoding >= 0.9.5
                     , asn1-types >= 0.3.2
                     , async >= 2.1
                     , auto-update >= 0.1.4
                     , BerkeleyDB >= 0.8.7
                     , binary >= 0.8.3
                     , byteable >= 0.1.1
                     , bytestring >= 0.10.8
                     , classy-prelude >= 1.0.0.2
                     , conduit >= 1.2.8
                     , connection >= 0.2.8
                     , containers >= 0.5.7
                     , cryptonite >= 0.24
                     , data-default >= 0.7.1.1
                     , directory >= 1.2.6.2
                     , either >= 4.4
                     , entropy >= 0.3
                     , hashable >= 1.2.4
                     , haskeline >= 0.7.2.3
                     , hex >= 0.1.2
                     , hourglass >= 0.2.10
                     , htoml >= 1.0.0.1
                     , http-client-tls >= 0.3.5.1
                     , http-conduit >= 2.1
                     , http-types
                     , iproute >= 1.7
                     -- , lens
                     , leveldb-haskell >= 0.6.5
                     , logging >= 3.0.4
                     , memory >= 0.13
                     , mtl >= 2.2.1
                     , network >= 2.6.3.1
                     , network-uri >= 2.6.1.0
                     , pem >= 0.2.2
                     , pretty-simple >= 2.0.1.0
                     , random >= 1.1
                     , raw-strings-qq >= 1.1
                     , resource-pool >= 0.2.3.2
                     , saltine >= 0.0.0.4
                     , split >= 0.2.3.1
                     , sqlite-simple >= 0.4.13.0
                     , text >= 1.2.2.1
                     , text-format >= 0.3.1.1
                     , tls >= 1.3.11
                     , tls-session-manager >= 0.0.0.1
                     , unix >= 2.7.2.1
                     , unordered-containers >= 0.2.7.1
                     , wai >= 3.2.1.1
                     , warp >= 3.2.8
                     , warp-tls >= 3.2.4
                     , x509 >= 1.7.2
                     , x509-system >= 1.6.6
                     , x509-validation >= 1.6.9
                     , x509-store >= 1.6.5
  default-language:    Haskell2010

test-suite constellation-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:       Constellation.Configure.Main.Test
                       Constellation.Enclave.Test
                       Constellation.Enclave.Key.Test
                       Constellation.Enclave.Keygen.Main.Test
                       Constellation.Enclave.Main.Test
                       Constellation.Enclave.Payload.Test
                       Constellation.Enclave.Types.Test
                       Constellation.MockData
                       Constellation.Node.Test
                       Constellation.Node.Api.Test
                       Constellation.Node.Config.Test
                       Constellation.Node.Main.Test
                       Constellation.Node.Storage.BerkeleyDb.Test
                       Constellation.Node.Storage.LevelDb.Test
                       Constellation.Node.Storage.Directory.Test
                       Constellation.Node.Storage.Memory.Test
                       Constellation.Node.Storage.Sqlite.Test
                       Constellation.Node.Storage.TestUtil
                       Constellation.Node.Trust.Test
                       Constellation.Node.Types.Test
                       Constellation.TestUtil
                       Constellation.Util.AtExit.Test
                       Constellation.Util.ByteString.Test
                       Constellation.Util.Either.Test
                       Constellation.Util.Exception.Test
                       Constellation.Util.File.Test
                       Constellation.Util.Http.Test
                       Constellation.Util.Json.Test
                       Constellation.Util.Lockable.Test
                       Constellation.Util.Logging.Test
                       Constellation.Util.Network.Test
                       Constellation.Util.String.Test
                       Constellation.Util.Text.Test
                       Constellation.Util.Tls.Test
                       Constellation.Util.Wai.Test
  main-is:             Main.hs
  ghc-options:         -threaded
                       -Wall
  build-depends:       constellation
                     , base
                     , aeson
                     , bytestring
                     , classy-prelude
                     , cryptonite
                     , data-default
                     , filepath
                     , hex
                     , http-types
                     , iproute
                     , logging
                     , memory
                     , network
                     , QuickCheck
                     , tasty
                     , tasty-hunit
                     , tasty-quickcheck
                     , temporary
                     , text
                     , text-format
                     , tls
                     , unix
                     , unordered-containers
                     , warp
                     , warp-tls
                     , x509
                     , x509-validation
  default-language:    Haskell2010

executable constellation-node
  hs-source-dirs:      bin
  main-is:             Node.hs
  ghc-options:         -threaded
                       -Wall
  build-depends:       constellation
                     , base
  default-language:    Haskell2010

-- executable constellation-enclave
--   hs-source-dirs:      bin
--   main-is:             Enclave.hs
--   ghc-options:         -threaded
--                        -Wall
--   build-depends:       base
--                      , constellation
--   default-language:    Haskell2010

-- executable constellation-enclave-keygen
--   hs-source-dirs:      bin
--   main-is:             EnclaveKeygen.hs
--   ghc-options:         -threaded
--                        -Wall
--   build-depends:       base
--                      , constellation
--   default-language:    Haskell2010

-- executable constellation-configure
--   hs-source-dirs:      bin
--   main-is:             Configure.hs
--   ghc-options:         -threaded
--                        -Wall
--   build-depends:       base
--                      , constellation
--   default-language:    Haskell2010

-- executable constellation-benchmark
--   hs-source-dirs:      bench
--   main-is:             Main.hs
--   ghc-options:         -threaded
--                        -Wall
--   build-depends:       base
--                      , constellation
--                      , criterion
--   default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jpmorganchase/constellation
